# streamlit-kmeans-demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
tests/: test_streamlit_kmeans_demo.py
utils/: __init__.py  imutil.py  modeling.py
